# PHRI_1920

./: .gitignore  .gitmodules  README.md  armandfingermove.py  believe_movement.py  phri1920.launch  pose2.py  stack.xml
evaluation/: Alternating_and_Trust_coherence.ipynb  Chris_Vadym_initial_EDA.ipynb  Cubes_Allocation_Analysis.ipynb  count_cubes_evaluation.ipynb  odd_even_participants_separate_evaluation.ipynb  phri_eval.ipynb  questionnaire_eval.ipynb
lighting/: CMakeLists.txt  package.xml
lighting/scripts/: LightControlService.py  LightMIDIController.py  light_patterns.yml  settings.yml
lighting/srv/: LightControl.srv
motion/: .gitignore  README.md  believe_movement.py  my_name_movement.py  no_pose.py  poses.py  show_path.py
moves_and_positions/: confident.csv  hi.csv  i.csv  look_at_cubes.csv  look_right.csv  no.csv  open_arms.csv  point_left.csv  point_right.csv  run.csv  s0a0.csv  s1a0.csv  s2a0.csv  s2s0.csv  s3a0_v2.csv  s4a0.csv  thumbs_up.csv
nicoexp/: ut1.json
nicopose/: CMakeLists.txt  README.md  package.xml  pose.launch  requirements.txt
poses/: hi.json
scripts/: client_count.py
speech/: .gitignore  CMakeLists.txt  README.md  feedback.yml  generate_beep.py  package.xml  prototype.csv  questions.yml  repetition.yml  requirement.txt  script.yml  speakers.yml  speech_service_conventions.txt  todoafterxmas.txt  tts_converter.py
srv/: CountResources.srv
state_machine/: CMakeLists.txt  SpeechRecognition.srv  SpeechRecognitionStub.py  StateMachine.py  cube_counting.csv  package.xml  questions.yml  readme.md  scene1.yml  setup.py  (+1 more)
(+259 files in other folders)
